新增并处理TankDirChangdMsg