@@ -31,8 +31,8 @@ public class MsgDecoder extends ByteToMessageDecoder {
         Msg msg = null;
         //读出字节数组的内容进行解析
         //如果想增加新消息的时候如下这段代码不改变可以用 反射(reflection)
-        //Class.forName(msgType.toString() + "Msg").constructor().newInstance();
-        switch(msgType) {
+        msg = (Msg)Class.forName("com.maureen.tank.net." + msgType.toString() + "Msg").getDeclaredConstructor().newInstance();
+        /*switch(msgType) {
 	        case TankJoin:
 	        	msg = new TankJoinMsg();
 	        	break;
@@ -41,9 +41,11 @@ public class MsgDecoder extends ByteToMessageDecoder {
 	        	break;
 	        case TankStop:
 	        	msg = new TankStopMsg();
+	        case TankDirChanged:
+	        	msg = new TankDirChangedMsg();
         	default:
         		break;
-        }
+        } */
         msg.parse(bytes); //设定对象的各个属性
     	out.add(msg);
     }
